--- a/exercises/.gitignore
+++ b/exercises/.gitignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+#dist
 dist-ssr
 *.local
 
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Anything that is not exercises to be submitted
+#public
+#src
+#vite.config.js
+#index.html
+#package-lock.json
+#package.json
+#.eslintrc.cjs
+#README.md
