--- a/notesApp-backend/package.json
+++ b/notesApp-backend/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
     "test": "NODE_ENV=test node --test",
-    "build:ui": "rm -rf dist && cd ../exercises/ && npm run build && cp -r dist ../backend",
+    "build:ui": "rm -rf dist && cd ../notesApp-frontend && npm run build && cp -r dist ../notesApp-backend",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs"
