--- a/Ilari-flights/package.json
+++ b/Ilari-flights/package.json
@@ -29,6 +29,8 @@
     "typescript-eslint": "^7.17.0"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   }
 }
